--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <button> hi welcome </button>
 
-    <script src="script.js">
+    <script src="testbench.js">
         
     </script>
 
