--- a/practice.html
+++ b/practice.html
@@ -7,12 +7,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="practice.css">
 </head>
-<body>
-    <div class="image-prac">
-        <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__480.jpg" alt="" class="img-edit">
-        <img src="https://thumbs.dreamstime.com/b/beautiful-rain-forest-ang-ka-nature-trail-doi-inthanon-national-park-thailand-36703721.jpg" alt="" class="img-edit">
-    </div>
 
-    <div class="text"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum voluptatum veniam ad.</p></div>
+<body>
+    <h1 onclick="changeColor(this)">Click to change color</h1>
+    <button id="myBtn">Click Me!!!</button>
+    
 </body>
+<script src="practice.js"></script>
 </html>
