--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div class="scissor" > <img src="https://imageengine.victorinox.com/mediahub/31970/640Wx560H/CUT_8_0904_10__S1.jpg" alt="scissors" class="blocks">    
         </div>
     </div>
+    <div class="mid-text"> <h2>lets start !!</h2></div>
     <div class="flex-container-two">
         <div class="user-points">1 <br> user</div>
         <div class="live-score">1/2 <br> score</div>
