--- a/practice.html
+++ b/practice.html
@@ -9,9 +9,16 @@
 </head>
 
 <body>
-    <h1 onclick="changeColor(this)">Click to change color</h1>
-    <button id="myBtn">Click Me!!!</button>
-    
+    <div class="container">
+        <div id="add-task-container">
+            <input type="text" placeholder="Enter Task" id="input-task">
+            <button id="add-task"><i class="fa-solid fa-plus">+</i></button>
+        </div>
+
+
+        <div id="task-container"></div>
+
+    </div>
 </body>
-<script src="practice.js"></script>
+<script src="prac-2.js"></script>
 </html>
